Fix datepciker unreadable inputs #58

--- a/src/components/datepicker/datepicker.scss
+++ b/src/components/datepicker/datepicker.scss
@@ -17,12 +17,22 @@
     &_split {
       display: flex;
 
-      #{$class}__input {
-        flex-grow: 1;
+      @media (max-width: $xs) {
+        flex-direction: column;
+      }
+    }
+  }
 
-        &:first-child {
-          margin-right: 1.25rem;
-        }
+  &__input {
+    flex-grow: 1;
+
+    &:first-child {
+      margin-right: 1.25rem;
+    }
+
+    @media (max-width: $xs) {
+      &:first-child {
+        margin: 0 0 0.625rem;
       }
     }
   }
